--- a/bin/EasySapWeb.dll.config
+++ b/bin/EasySapWeb.dll.config
@@ -15,8 +15,7 @@
     <add key="CrystalImageCleaner-Age" value="120000" />
   </appSettings>
   <connectionStrings>
-    <add name="EASYIDB" connectionString="server=10.238.57.41;database=DB_PLAT_WEB;uid=sa;password=Sa1;Timeout=3600;" />
-    <!--<add name="EASYIDB" connectionString="server=localhost;database=DB_WEB;uid=sa;password=Sa1;Timeout=3600;"/>-->
+    <add name="EASYIDB" connectionString="server=10.238.57.41;database=DB_PLAT_WEB;uid=sa;password=Sa1;Timeout=3600;" providerName="System.Data.SqlClient"/>
     <add name="WEBDB" connectionString="server=DESKTOP-L5VQGU3\SQLEXPRESS;database=DB_PLAT_WEB;uid=sa;password=Sa1;Timeout=3600;" />
     <add name="DB_WEB_PUBLICA" connectionString="Data Source=190.106.203.34,7010;Initial Catalog=DB_WEB;Persist Security Info=True;User ID=sa;Password=Passw0rd" providerName="System.Data.SqlClient" />
     <add name="interfaceConnectionString" connectionString="Data Source=SRV1;Initial Catalog=DB_PLAT_WEB;Persist Security Info=True;User ID=sa;Password=Sa1" providerName="System.Data.SqlClient" />
